fixed background transition and overflow error

--- a/demo/assets/style.css
+++ b/demo/assets/style.css
@@ -12,8 +12,7 @@
     z-index: 1010;
 }
 .horizontal-bars {
-    overflow: hidden;
-    height: 100vh;
+    overflow: auto;
 }
 .bar {
     padding: 0;
@@ -85,8 +84,9 @@
 .bar:hover:after {
     opacity: 0.4;
 }
-.bar.bar-full:hover:after {
+.bar.bar-full:after {
     opacity: 1;
+    position: fixed;
 }
 .bar:hover {
     background-position-x: -250px;
@@ -105,6 +105,7 @@
     width: 100%;
     height: 100%;
     z-index: 10;
+    overflow: auto;
     transition: all 0.5s ease-out;
 }
 .bar-full .inner-bar {
@@ -272,7 +273,7 @@
 @media screen and (max-width: 992px) {
     .bar {
         height: 33.3333%;
-        transition: initial;
+        transition: background-position-x 1s ease-out;
     }
     .zero-width {
         transition: initial;
@@ -290,7 +291,10 @@
     }
     .bar:hover {
         background-position-x: -100px;
-        transition: background-position-x 3s ease-in;
+        transition: background-position-x 2s ease-in;
+    }
+    .bar-full:hover {
+        background-position-x: center;
     }
 }
 @media screen and (max-width: 768px) {
